<resources>
    <string name="app_name">TrainAlert</string>

    <!-- Navigation item IDs/titles -->
    <string name="nav_pois">@string/title_activity_poi</string>
    <string name="nav_categories">@string/title_activity_category</string>
    <string name="nav_settings">@string/title_activity_setting</string>
    <string name="nav_profiles">@string/title_activity_profile</string>
    <string name="nav_manual">@string/title_activity_manual</string>
    <string name="nav_logout">Odhlásit</string>

    <!-- ActionBar items -->
    <string name="menu_notification">Upozornění</string>
    <string name="menu_trip_selection">Vyběr jízdy</string>
    <string name="menu_profile_selection">Vyběr profilu</string>
    <string name="menu_sound">Vypnout/zapnout zvuk</string>
    <string name="menu_clock">Hodiny</string>

    <!-- Dialog fragments -->
    <string name="fragment_trip_id_business_trip_0">Služební jízda (do Mostu)</string>
    <string name="fragment_trip_id_business_trip_1">Služební jízda (do Lovosic)</string>
    <string name="fragment_trip_id_manual_selection">Ruční zadání</string>

    <!-- TripFragment -->
    <string name="fragment_trip_train_id_label">Vlak:</string>
    <string name="fragment_trip_trip_id_label">Jízda:</string>
    <string name="fragment_trip_name_label">Zastávka</string>
    <string name="fragment_trip_delay_label">Zpoždění\n(min.)</string>
    <string name="fragment_trip_arrival_label">Příjezd</string>
    <string name="fragment_trip_go_ahead">Projeď</string>

    <string name="activity_main_navigation_drawer_open">Open</string>
    <string name="activity_main_navigation_drawer_close">Close</string>

    <!-- Content Descriptions -->
    <string name="fragment_poi_list_icon_desc">Icon</string>
    <string name="fragment_poi_list_title_desc">Title</string>
    <string name="fragment_main_image_view_desc">Red round sign</string>
    <string name="nav_header_item_image_view_desc">Icon</string>
    <string name="poi_default_name">Popisek</string>

    <!-- Titles -->
    <string name="title_activity_poi">Body zájmu</string>
    <string name="title_activity_category">Kategorie</string>
    <string name="title_activity_setting">Nastavení</string>
    <string name="title_activity_profile">Profily</string>
    <string name="title_activity_manual">Manuál</string>
    <string name="title_fragment_category_picker">Kategorie</string>
    <string name="title_fragment_trip_id">Číslo jízdy</string>
    <string name="title_fragment_password">Heslo</string>

    <!-- Information Messages -->
    <string name="message_new_poi_added">Bod zájmu byl přidán</string>
    <string name="message_new_poi_edited">Bod zájmu byl editován</string>
    <string name="message_new_poi_loaction_saved">Nová poloha bude uložena</string>
    <string name="message_destination_reached">Přijel jsi do cílové stanice\n%s</string>
    <string name="message_successful_logout">Byl jste úspěšně odhlášen</string>
    <string name="message_business_trip_set">Služební jízda byla započatá</string>
    <string name="message_profil_loaded">Profil byl načten</string>
    <string name="message_profil_updated">Profil byl aktualizován</string>

    <!-- Dialog Messages -->
    <string name="dialog_message_def_profile_deletion_title">Smazat výchozí profil?</string>
    <string name="dialog_message_def_profile_deletion">Tento profil obsahuje výchozí konfiguraci. V případě smazání ho již nebude možné obnovit!</string>

    <string name="dialog_message_profile_deletion_title">Smazat profil?</string>
    <string name="dialog_message_profile_deletion">V případě smazání ho již nebude možné obnovit!</string>

    <!-- Error Messages -->
    <string name="error_wrong_password">Bylo zadáno špatné heslo</string>
    <string name="error_location_unavailable">GPS data\nnejsou dostupná</string>
    <string name="error_cannot_delete_poi">Nemůžu vymazat (chyba serveru)</string>

    <!-- Button Labels -->
    <string name="button_save">Ulož</string>
    <string name="button_cancel">Zruš</string>
    <string name="button_confirm">Potvrď</string>
    <string name="button_delete">Smazat</string>

    <!-- Categories -->
    <string name="category_crossing">Přejezd</string>
    <string name="category_trainstation">Železniční stanice</string>
    <string name="category_stop">Zastávka</string>
    <string name="category_lights">Vjezdové návěstidlo</string>
    <string name="category_beforelights">Předvěst</string>
    <string name="category_speed_limitation_20">Omezení rychlosti 20 km/h</string>
    <string name="category_speed_limitation_30">Omezení rychlosti 30 km/h</string>
    <string name="category_speed_limitation_40">Omezení rychlosti 40 km/h</string>
    <string name="category_speed_limitation_50">Omezení rychlosti 50 km/h</string>
    <string name="category_speed_limitation_70">Omezení rychlosti 70 km/h</string>
    <string name="category_stop_azd">Zastávka (načtená ze serveru)</string>

    <string name="text_before_default">Pozor za</string>
    <string name="text_before_default_crossing">Přejezd za</string>
    <string name="text_before_default_trainstation">Stanice za</string>
    <string name="text_before_default_stop">Zastávka za</string>
    <string name="text_before_default_lights">Návěstidlo za</string>
    <string name="text_before_default_beforelights">Předvěst za</string>
    <string name="text_before_default_speed_limitation_20">Rychlostní omezení 20 km/h za</string>
    <string name="text_before_default_speed_limitation_30">Rychlostní omezení 30 km/h za</string>
    <string name="text_before_default_speed_limitation_40">Rychlostní omezení 40 km/h za</string>
    <string name="text_before_default_speed_limitation_50">Rychlostní omezení 50 km/h za</string>
    <string name="text_before_default_speed_limitation_70">Rychlostní omezení 70 km/h za</string>

    <string name="text_after_default">m</string>

    <string name="speed_view_unit">km/h</string>

    <!-- ActionBar notifications -->
    <string name="action_bar_notification_at_stop">Nacházíš se ve stanici</string>


    <!-- Preferences -->
    <string name="pref_ringtone_silent">silent</string>

    <string name="pref_title_ringtone">Zvukové upozornění</string>
    <string name="pref_title_vibrate">Vibrovat</string>
    <string name="pref_title_before_text">Text upozornění</string>
    <string name="pref_title_include_distance">Zahrnout vzdálenost</string>
    <string name="pref_title_voice_navigation">Zapnout zvukové upozornění</string>
    <string name="pref_title_after_text">Text upozornění za vzdáleností</string>
    <string name="pref_title_graphics">Grafika</string>
    <string name="pref_title_distances">Vzdálenosti</string>
    <string name="pref_title_sound">Zapnout zvuky</string>
    <string name="pref_title_speed_limit">Zobrazit indikátor omezení rychlosti</string>
    <string name="pref_title_speed">Zobrazit indikátor rychlosti</string>
    <string name="pref_title_compass">Zobrazit kompas</string>

    <string name="pref_summary_distances">Nastav vzdálenosti, které vyvolávají upozornění</string>
    <string name="pref_summary_voice_navigation">Toto nastavení vypne hlasovou navigaci</string>

    <string name="message_application_termination">TrainAlert aplikace bude kvůli nedostatečným oprávněním ukončena.</string>

    <string-array name="pref_graphics_titles">
        <item>Černý čtverec</item>
        <item>Modrý kruh</item>
        <item>Modrý prstenec</item>
        <item>Modrý čtverec</item>
        <item>Šedý čtverec</item>
        <item>Červený kruh</item>
        <item>Červený prstenec</item>
        <item>Červený čtverec</item>
        <item>Žlutý čtverec</item>
    </string-array>
    <string-array name="pref_graphics_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="pref_distances_titles">
        <item>75 m</item>
        <item>100 m</item>
        <item>150 m</item>
        <item>200 m</item>
        <item>300 m</item>
        <item>400 m</item>
        <item>700 m</item>
    </string-array>
    <string-array name="pref_distances_values">
        <item>75</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>700</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="fragmentProfile_emptyText">Není uložen žádný profil</string>

</resources>