<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_notification"
        android:title="@string/menu_notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_trip_selection"
        android:icon="@drawable/ic_trip_selection_red"
        android:title="@string/menu_trip_selection"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_profile_selection"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile_selection"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_sound"
        android:icon="@drawable/ic_volume_up"
        android:title="@string/menu_sound"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_clock"
        android:title="@string/menu_clock"
        app:actionViewClass="android.widget.TextView"
        app:showAsAction="always" />

</menu>